2003-11-13  Radek Doulik  <rodo@ximian.com>

	* em-junk-filter.c (em_junk_sa_is_available): new helper function,
	use it before any call to spamassassin, spamc and sa-learn
	(em_junk_sa_test_spamd): first test if spamassassin is available
	(em_junk_sa_test_spamd): rename em_junk_sa_spamd_tested to
	em_junk_sa_tested, always set em_junk_sa_tested

	* mail-folder-cache.c (folder_changed): don't call
	CAMEL_IS_VJUNK_FOLDER, it was added by mistake

2003-11-13  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (em_format_html_add_pobject): use malloc0 for
	the pobject memory.

2003-11-12  Not Zed  <NotZed@Ximian.com>

	* mail-account-gui.c (smime_sign_key_select)
	(smime_encrypt_key_select, smime_encrypt_key_selected)
	(smime_sign_key_selected): implement the key selector popup using
	e-cert-selector.

2003-11-11  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (efh_application_xpkcs7mime): output icons of the status.
	(em_format_html_add_pobject): Changed to take a size specificier,
	return the pobject, and re-ordered args to be more consistent with
	puri stuff.
	(em_format_html_remove_pobject): handle the free callback if set.

	* em-format.c (emf_application_xpkcs7mime): moved this to
	em-format-html since it needs to do icon stuff.

	* mail-security.glade: new glade file for security related stuff.

	* mail-config.glade: removed the message security dialogue, it
	gets opened automatically by the config code :(

2003-11-10  Ettore Perazzoli  <ettore@ximian.com>

	* GNOME_Evolution_Mail.server.in.in: Set an
	"evolution:component_alias" property with a value of "mail".

2003-11-10  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (em_format_html_multipart_signed_sign): changed
	for cipher context api changes.
	* em-format.c (emf_multipart_signed): ditto.

2003-11-07  Not Zed  <NotZed@Ximian.com>

	* mail-config.glade: added security_information_dialog (probably
	temporarily in this file).

	* em-format.c (em_format_is_attachment): also treat pkcs7-mime as